--- a/Train.ipynb
+++ b/Train.ipynb
@@ -947,7 +947,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx_to_word = ['silence', 'unknown', 'yes', 'no', 'up', 'down', 'left', 'right', 'on', 'off', 'stop', 'go']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1006,17 @@
     "        with io.open(data_dir+\"real_test_predict_\"+key.replace(\".npy\",\"\")+\".txt\",'w') as f:\n",
     "            with io.open(data_dir+\"real_test_file_\"+key.replace(\".npy\",\"\")+\".txt\",'r') as r_f:\n",
     "                for x in predicted_list:\n",
-    "                    f.write(r_f.readline().replace(\"\\n\",\"\")+\" \"+str(x)+\"\\n\")"
+    "                    f.write(r_f.readline().replace(\"\\n\",\"\")+\",\"+idx_to_word[x]+\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat /home/maikfangogoair/tmp/save/real_test_predict_*txt \\\n",
+    "> /home/maikfangogoair/tensorflow-speech-recognition-challenge/submit_entry_2.csv"
    ]
   },
   {
